--- a/BizzSummitAPI/BizzSummitAPI/Properties/serviceDependencies.BizzSummitAPIAppService - Web Deploy.json
+++ b/BizzSummitAPI/BizzSummitAPI/Properties/serviceDependencies.BizzSummitAPIAppService - Web Deploy.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
     "cosmosdb1": {
+      "secretStore": "AzureAppSettings",
       "resourceId": "/subscriptions/[parameters('subscriptionId')]/resourceGroups/[parameters('resourceGroupName')]/providers/Microsoft.DocumentDB/databaseAccounts/bizzsummitcosmosdb",
       "type": "cosmosdb.azure",
-      "connectionId": "CosmosDBKeys",
-      "secretStore": "AzureAppSettings"
+      "connectionId": "CosmosDBKeys"
     }
   }
 }
